# 4NXCI

./: readme.md
.github/workflows/: build.yml
src/: CMakeLists.txt  filepath.c  utils.h
src/msvc_compat/: libgen.c
src/msvc_compat/include/: getopt.h  libgen.h
